--- a/days/monday_5_6_19.tex
+++ b/days/monday_5_6_19.tex
@@ -188,6 +188,7 @@ Now off to the Structure and Priors in Reinforcement Learning workshop!
 
 
 \subsection{SPiRL Workshop}
+\label{sec:spirl}
 
 First, Pieter Abbeel on Model-based RL!
 
@@ -769,7 +770,7 @@ Experiments: 1) learning from observations on causal networks (can the agent lea
 Jane A: In RL, lots of ways to be out of sample (in contrast to supervised learning), so it's much harder. Generalization is just harder because lots of things can change: state, action, policy, transition function, reward, function, and so on. RL also requires an ongoing interaction with the environment -- input is really dependent on policy, so input will change as you update policy.
 
 \subsubsection{Panel: Matt, Jane, Doina, Sergey, Karthik, Tejas, Tim}
-
+\label{sec:panel}
 Q: What is the role of structure vs. data? \\
 
 Tim: Question is loaded. Depends on what you want to do: if you want to get good at a niche, specify more. If you want a general learning algorithm: specify less. \\
