--- a/days/wednesday_5_8_19.tex
+++ b/days/wednesday_5_8_19.tex
@@ -196,7 +196,7 @@ Other tasks investigated: prior matching, coordinate prediction, relative coordi
 \dnote{Off to more meetings.}
 
 \subsection{Keynote: Zeynep Tufekci on Dangers if ML Works}
-
+\label{sec:keynote_zeynep}
 Grew up wanting to be a physicist! But: eventually, many physicist encounter the {\it nuclear} problem: massive ethical issues facing the advancement of a scientific field. \\
 
 $\ra$ At CERN recently: giant projects! 700 people on the Higgs Boson paper. They were concerned about how to divide up the Nobel prize, meanwhile in CS we're worrying about the impact our tools have on society, security, labor, climate, social infrastructure, and beyond. So: lots of ethical issues in CS, too! \\
@@ -352,6 +352,7 @@ A: Lots of things! Skin care diagnosis and other tools that are empowring. Need 
 
 
 \subsection{Debate led by Leslie Kaelbling}
+\label{sec:debate}
 
 The debaters are: Josh Tenenbaum (JT), Doina Precup (DP), Suchi Sara (SS), Jeff Clun (JC), with Leslie's comments as LPK. \\
 
@@ -416,7 +417,7 @@ SS: Except you missed this along the way: what about everything that happens alo
 
 JC: Fascinating question! General question of whether we should be building a general AI? Also, what should we be doing along the way to building that? Very real considerations. What's the fastest way to get there: I say the meta-learning approach above. Regarding ethics? Lots of open questions, too. \\
 
-LPJ: One thing Jeff didn't mention was the physical infrastructure required to make this work. Robots need to interact with the world unless we rely on a perfect simulator. I'm not sure we can get that taking off that we might suggest.
+LPK: One thing Jeff didn't mention was the physical infrastructure required to make this work. Robots need to interact with the world unless we rely on a perfect simulator. I'm not sure we can get that taking off that we might suggest.
 
 \spacerule
 
