--- a/iclr.bib
+++ b/iclr.bib
@@ -1385,3 +1385,45 @@ year={2018}
   journal={arXiv preprint arXiv:1808.06670},
   year={2018}
 }
+@inproceedings{li2018smoothing,
+  title={Smoothing the Geometry of Probabilistic Box Embeddings},
+  author={Li, Xiang and Vilnis, Luke and Zhang, Dongxu and Boratko, Michael and McCallum, Andrew},
+  year={2019},
+  booktitle={ICLR}
+}
+@article{mao2019neuro,
+  title={The Neuro-Symbolic concept learner: Interpreting scenes, words, and sentences from natural supervision},
+  author={Mao, Jiayuan and Gan, Chuang and Kohli, Pushmeet and Tenenbaum, Joshua B and Wu, Jiajun},
+  journal={arXiv preprint arXiv:1904.12584},
+  year={2019}
+}
+@article{wu2019pay,
+  title={Pay Less Attention with Lightweight and Dynamic Convolutions},
+  author={Wu, Felix and Fan, Angela and Baevski, Alexei and Dauphin, Yann N and Auli, Michael},
+  journal={arXiv preprint arXiv:1901.10430},
+  year={2019}
+}
+@article{shen2019ordered,
+  title={Ordered Neurons: Integrating Tree Structures into Recurrent Neural Networks},
+  author={Shen, Yikang and Tan, Shawn and Sordoni, Alessandro and Courville, Aaron},
+  journal={Proceedings of ICLR},
+  year={2019}
+}
+@inproceedings{nachum2018near,
+  title={Near-Optimal Representation Learning for Hierarchical Reinforcement Learning},
+  author={Nachum, Ofir and Gu, Shixiang and Lee, Honglak and Levine, Sergey},
+  booktitle={ICLR},
+  year={2019}
+}
+@inproceedings{levy2018learning,
+  title={Learning Multi-Level Hierarchies with Hindsight},
+  author={Levy, Andrew and Konidaris, George and Platt, Robert and Saenko, Kate},
+  booktitle={ICLR},
+  year={2019}
+}
+@inproceedings{koul2018learning,
+  title={Learning Finite State Representations of Recurrent Policy Networks},
+  author={Koul, Anurag and Greydanus, Sam and Fern, Alan},
+  inproceedings={ICLR},
+  year={2019}
+}
