--- a/main.tex
+++ b/main.tex
@@ -24,17 +24,19 @@
 \newpage
 
 
-This document contains notes I took during the events I managed to make it to at (my first) ICLR, in New Orleans, LA, USA. Please feel free to distribute it and shoot me an email at \durl{david_abel@brown.edu} if you find any typos or other items that need correcting.
-
+This document contains notes I took during the events I managed to make it to at (my first) ICLR, in New Orleans, LA, USA. Please feel free to distribute it and shoot me an email at \durl{david_abel@brown.edu} if you find any typos or other items that need correcting. 
 
 
 \section{Conference Highlights}
 
-
-Personal takeaways:
+Sadly, I missed more talks than normal this conference (and had to fly out a bit early so I missed a good chunk of Thursday). Some highlights:
 \begin{itemize}
-    \item In the wake of Rich Sutton's bitter lesson\footnote{\url{http://incompleteideas.net/IncIdeas/BitterLesson.html}} there was a lot of discussion about pure end-to-end learning vs. incorporation of structure and priors (especially at the SPiRL workshop). Lots of really excellent discussion about the use of structure in RL in particular.
-    \item Meta-RL is very popular.
+    \item Lots of continued discussion following the recent wave of conversations around Rich Sutton's bitter lesson\footnote{\url{http://incompleteideas.net/IncIdeas/BitterLesson.html}}. The debate held at the main conference track (see Section~\ref{sec:debate}) and the panel at the SPiRL workshop\footnote{\url{http://spirl.info}} (see Section~\ref{sec:panel}) featured lots of insights about the topic -- highly recommended to check them out!
+    \item The SPiRL workshop was {\it outstanding}. The speaker lineup, contributed talks, and panel were all exceptional (see Section~\ref{sec:spirl}). A huge thanks to the organizers for putting on such a great event.
+    \item Hot topics: 1) Meta learning is very popular (particularly meta RL), and 2) Graph neural networks.
+    \item Favorite talks: I loved the keynotes! I didn't make it to all of them but the ones I did catch were all fantastic. Definitely check out Prof. Zeynep Tufekci's amazing talk if you can find a video (my summary is in Section~\ref{sec:keynote_zeynep}). If I happen to find a recording I'll link it here.
+    \item Some really nice papers in learning abstraction/hierarchies in RL: 1) ``Near-Optimal Representation Learning for Hierarchical Reinforcement Learning" by \citet{nachum2018near}, and 2) ``Learning Multi-Level Hierarchies with Hindsight" by \citet{levy2018learning}; and ``Learning Finite State Representations of Recurrent Policy Networks' by~\citet{koul2018learning}.
+    \item A small thing, but I *loved* how large the poster were allowed to be (something like 5ft wide). Encouraged some great designs and easy viewing for the onlookers, even from a distance.
 \end{itemize}
 
 % ------------
